--- a/public/authentication.html
+++ b/public/authentication.html
@@ -100,7 +100,7 @@
                     <div class="row align-items-center">
                         <div class="col-6">
                             <div class="mobile-logo">
-                                <a class="logo__dark" href="#"><img src="img/logo/logo.png" alt="logo"></a>
+                                <a class="logo__dark" href="index.html"><img src="img/logo/logo.png" alt="logo"></a>
                             </div>
                         </div>
                         <div class="col-6">
@@ -123,7 +123,7 @@
             <div class="header-mobile-aside-wrap">
                 <div class="mobile-search">
                     <form class="search-form" action="#">
-                        <input type="text" placeholder="Search entire store…">
+                        <input type="text" placeholder="Search...">
                         <button class="button-search"><i class="icofont icofont-search-2"></i></button>
                     </form>
                 </div>
