--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
                     <div class="row align-items-center">
                         <div class="col-6">
                             <div class="mobile-logo">
-                                <a class="logo__dark" href="#"><img src="img/logo/logo.png" alt="logo"></a>
+                                <a class="logo__dark" href="index.html"><img src="img/logo/logo.png" alt="logo"></a>
                             </div>
                         </div>
                         <div class="col-6">
@@ -123,7 +123,7 @@
             <div class="header-mobile-aside-wrap">
                 <div class="mobile-search">
                     <form class="search-form" action="#">
-                        <input type="text" placeholder="Search entire store…">
+                        <input type="text" placeholder="Search...">
                         <button class="button-search"><i class="icofont icofont-search-2"></i></button>
                     </form>
                 </div>
@@ -208,28 +208,23 @@
                                 <h2>Welcome to the <span>Online</span> Learning Center</h2>
                             </div>
                             <div class="aboutarea__para">
-                                <p>Forging relationships between multi to national
-                                    <br>Governments and global NGOs begins.</p>
+                                <p>Here, you can acquire valuable insights into the domain of cybersecurity
+                                    <br>through our easy-to-navigate e-learning platform.</p>
                             </div>
                             <div class="aboutarea__list">
                                 <ul>
                                     <li>
-                                        <i class="icofont-check"></i> Explore a variety of fresh educational teach
+                                        <i class="icofont-check"></i> Simplified learning modules
                                     </li>
 
                                     <li>
-                                        <i class="icofont-check"></i> Explore a variety of fresh educational teach
+                                        <i class="icofont-check"></i> Comprehensive understanding of cybersecurity
                                     </li>
 
                                     <li>
-                                        <i class="icofont-check"></i> Explore a variety of fresh educational teach
+                                        <i class="icofont-check"></i> Adaptable learning pace
                                     </li>
                                 </ul>
-                            </div>
-                            <div class="aboutarea__bottom__button">
-                                <a class="default__button" href="#"> More About
-                                    <i class="icofont-long-arrow-right"></i>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -244,22 +239,16 @@
                 <div class="row populerarea__wraper" data-aos="fade-up">
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                         <div class="populerarea__heading heading__underline">
-                            <div class="default__small__button">Course List</div>
-                            <h2>Populer <span>Subjects</span></h2>
+                            <div class="default__small__button">Categories</div>
+                            <h2>The <span>Cybersecurity</span></h2>
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5 col-md-6 col-sm-6">
                         <div class="populerarea__content">
-                            <p>Forging relationships between multi to national governments and global NGOs begins.</p>
+                            <p>Unravel the complexities of cybersecurity and understand its importance in today's digital age.</p>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6" data-aos="fade-up">
-                        <div class="populerarea__button">
-                            <a class="default__button" href="course.html">All Catagories
-                                <i class="icofont-long-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
+
 
                 </div>
                 <div class="row">
@@ -285,8 +274,8 @@
                                 </div>
                             </div>
                             <div class="service__content">
-                                <h3><a href="course-details.html">Business Studies</a></h3>
-                                <p>Business is succes</p>
+                                <h3>Data Encryption</h3>
+                                <p>The Key to Privacy</p>
                             </div>
                             <div class="service__small__img">
                                 <svg class="icon__hover__img" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -325,8 +314,8 @@
                                 </div>
                             </div>
                             <div class="service__content">
-                                <h3><a href="course-details.html">Programming Tech</a></h3>
-                                <p>update your skill</p>
+                                <h3>Network Security</h3>
+                                <p>Guarding the Gates</p>
                             </div>
                             <div class="service__small__img">
                                 <svg class="icon__hover__img" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -356,8 +345,8 @@
                                 </div>
                             </div>
                             <div class="service__content">
-                                <h3><a href="course-details.html">Artist & Design</a></h3>
-                                <p>show creativity</p>
+                                <h3>Cyber Laws</h3>
+                                <p>Justice in the Digital World</p>
                             </div>
                             <div class="service__small__img">
                                 <svg class="icon__hover__img" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -386,8 +375,8 @@
                                 </div>
                             </div>
                             <div class="service__content">
-                                <h3><a href="course-details.html">Machine Learning</a></h3>
-                                <p>Science is power</p>
+                                <h3><a href="course-details.html">Ethical Hacking</a></h3>
+                                <p>Wielding the Double-Edged Sword</p>
                             </div>
                             <div class="service__small__img">
                                 <svg class="icon__hover__img" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -420,8 +409,8 @@
                                 </div>
                             </div>
                             <div class="service__content">
-                                <h3><a href="course-details.html">Health & Fitness</a></h3>
-                                <p>health is wealth</p>
+                                <h3>Risk Management</h3>
+                                <p>Mastering Uncertainty</p>
                             </div>
                             <div class="service__small__img">
                                 <svg class="icon__hover__img" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -454,8 +443,8 @@
                                 </div>
                             </div>
                             <div class="service__content">
-                                <h3><a href="course-details.html">Health & Fitness</a></h3>
-                                <p>health is wealth</p>
+                                <h3>Security Architecture</h3>
+                                <p>Building Secure Foundations</p>
                             </div>
                             <div class="service__small__img">
                                 <svg class="icon__hover__img" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -486,8 +475,8 @@
                                 </div>
                             </div>
                             <div class="service__content">
-                                <h3><a href="course-details.html">Marketing Analysis</a></h3>
-                                <p>Science is power</p>
+                                <h3>Malware Analysis</h3>
+                                <p>Decoding the Threat</p>
                             </div>
                             <div class="service__small__img">
                                 <svg class="icon__hover__img" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -518,8 +507,8 @@
                                 </div>
                             </div>
                             <div class="service__content">
-                                <h3><a href="course-details.html">Business Studies</a></h3>
-                                <p>Business is succes</p>
+                                <h3>Incident Response</h3>
+                                <p>When Breach Happens</p>
                             </div>
                             <div class="service__small__img">
                                 <svg class="icon__hover__img" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -544,17 +533,17 @@
                         <div class="registerarea__wraper">
                             <div class="section__title registerarea__section__title">
                                 <div class="section__title__button">
-                                    <div class="default__small__button">Course List</div>
+                                    <div class="default__small__button">Form</div>
                                 </div>
                                 <div class="section__title__heading heading__underline">
-                                    <h2>Register Your <span>Account </span>Get free access to <small>60000</small> online course
+                                    <h2>Stay informed, <span>Fill out  </span>our contact form to receive <small>regular updates</small> on cybersecurity
                                     </h2>
                                 </div>
                             </div>
                             <div class="registerarea__content">
                                 <div class="registerarea__video">
                                     <div class="video__pop__btn">
-                                        <a class="video-btn" href="https://www.youtube.com/watch?v=vHdclsdkp28"> <img src="img/icon/video.png" alt=""></a>
+                                        <a class="video-btn" href="https://www.youtube.com/"> <img src="img/icon/video.png" alt=""></a>
                                     </div>
                                     <div class="registerarea__para">
                                         <p>Learn Something new & Build Your Career From Anywhere In The World</p>
@@ -570,7 +559,7 @@
                     <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                         <div class="registerarea__form">
                             <div class="registerarea__form__heading">
-                                <h4>Fill Your Registration</h4>
+                                <h4>Fill Your Form</h4>
                             </div>
                             <form action="#">
                                 <input class="register__input" type="text" placeholder="Your Name">
@@ -616,7 +605,7 @@
                                     <h3>About us</h3>
                                 </div>
                                 <div class="footerarea__content">
-                                    <p>orporate clients and leisure travelers has been relying on Groundlink for dependable safe, and professional chauffeured car end service in major cities across World.</p>
+                                    <p>E-Learning Security, is a resource for cybersecurity education. Primarily created for our Authentication Project, we aim to ensure robust online security in e-learning environments.</p>
                                 </div>
                                 <div class="footerarea__icon">
                                     <ul>
