--- a/public/blog.html
+++ b/public/blog.html
@@ -123,7 +123,7 @@
             <div class="header-mobile-aside-wrap">
                 <div class="mobile-search">
                     <form class="search-form" action="#">
-                        <input type="text" placeholder="Search entire store…">
+                        <input type="text" placeholder="Search...">
                         <button class="button-search"><i class="icofont icofont-search-2"></i></button>
                     </form>
                 </div>
