--- a/public/authentication.html
+++ b/public/authentication.html
@@ -186,8 +186,12 @@
         <!-- theme fixed shadow -->
 
      <!-- authentication__section__start -->
-        <iframe src="https://script.google.com/macros/s/AKfycbw0iXIYj_03I534jAScXOsKq5UxW-mVoD-Z8yh0VeeceRzgoEwJ49bYpuLsSvIAptuU/exec" style="border: 0; width: 100%; height: 100vh;" ></iframe>
+        <iframe src="https://script.google.com/macros/s/AKfycbyczVFZZ2ijHFYB1x9NjkTcILGNhppblJdxGB3SFfbJKPEgfsU3ILCGd5_IQz9Pf__Kaw/exec" style="border: 0; width: 100%; height: 100vh;" ></iframe>
         <!-- authentication__section__end-->
+		
+		<!--cookie_section_start -->
+		<script src="js/cookie.js"></script>
+		<!-- cookie_section_end-->
 
         <!-- footer__section__start -->
         <div class="footerarea">
