--- a/public/authentication.html
+++ b/public/authentication.html
@@ -186,11 +186,15 @@
         <!-- theme fixed shadow -->
 
      <!-- authentication__section__start -->
-        <iframe src="https://script.google.com/macros/s/AKfycbw9tlrF7-BbRLq84vj1CsC_kVa6to9kaHB5Wu9nk5sdnPEdBqiSEoYacN4mail7_HSP8Q/exec" style="border: 0; width: 100%; height: 100vh;" ></iframe>
+        <iframe src="https://script.google.com/macros/s/AKfycbytc81RnaPBDlUGGtt-NYfWMzY8srs_yb9BxNQP9oHFi9xWcqj_NHr2UHMlm298qx8b6A/exec" style="border: 0; width: 100%; height: 100vh;" ></iframe>
         <!-- authentication__section__end-->
 		
 		<!--cookie_section_start -->
-		<script src="js/cookie.js"></script>
+		<script>
+		window.addEventListener('data', function(event) {
+		console.log("data: " + event.data); // data received from child
+		});
+		</script>
 		<!-- cookie_section_end-->
 
         <!-- footer__section__start -->
