--- a/public/authentication.html
+++ b/public/authentication.html
@@ -186,14 +186,17 @@
         <!-- theme fixed shadow -->
 
      <!-- authentication__section__start -->
-        <iframe src="https://script.google.com/macros/s/AKfycbytc81RnaPBDlUGGtt-NYfWMzY8srs_yb9BxNQP9oHFi9xWcqj_NHr2UHMlm298qx8b6A/exec" style="border: 0; width: 100%; height: 100vh;" ></iframe>
+        <iframe src="https://script.google.com/macros/s/AKfycbwVkRbfbUfCK7BBKyFSL-G0Ka6nkNJGfSygvKgyYzLzMo1i62kjBamxt5VPH1rXGmB6Uw/exec" style="border: 0; width: 100%; height: 100vh;" ></iframe>
         <!-- authentication__section__end-->
 		
 		<!--cookie_section_start -->
 		<script>
-		window.addEventListener('data', function(event) {
-		console.log("data: " + event.data); // data received from child
-		});
+		window.addEventListener( "message",
+          function (e) {
+                if(e.origin !== 'https://script.google.com/macros/s/AKfycbwVkRbfbUfCK7BBKyFSL-G0Ka6nkNJGfSygvKgyYzLzMo1i62kjBamxt5VPH1rXGmB6Uw/exec'){ return; }
+                alert(e.data);
+          },
+          false);
 		</script>
 		<!-- cookie_section_end-->
 
