--- a/public/authentication.html
+++ b/public/authentication.html
@@ -186,17 +186,18 @@
         <!-- theme fixed shadow -->
 
      <!-- authentication__section__start -->
-        <iframe src="https://script.google.com/macros/s/AKfycbwVkRbfbUfCK7BBKyFSL-G0Ka6nkNJGfSygvKgyYzLzMo1i62kjBamxt5VPH1rXGmB6Uw/exec" style="border: 0; width: 100%; height: 100vh;" ></iframe>
+        <iframe src="https://script.google.com/macros/s/AKfycbwZnApL18GAI2RciDHCODCeu5b4Hcvpf3yqN12htqcAj9xW7QxS1gV45SChycmPxVyuhQ/exec" style="border: 0; width: 100%; height: 100vh;" ></iframe>
         <!-- authentication__section__end-->
 		
 		<!--cookie_section_start -->
 		<script>
-		window.addEventListener( "message",
-          function (e) {
-                if(e.origin !== 'https://script.google.com/macros/s/AKfycbwVkRbfbUfCK7BBKyFSL-G0Ka6nkNJGfSygvKgyYzLzMo1i62kjBamxt5VPH1rXGmB6Uw/exec'){ return; }
-                alert(e.data);
-          },
-          false);
+			function onMessageHandler(event) {
+			alert(event.data);
+			  if (event.data) {
+				console.(event.data)
+			  }
+			}
+			window.addEventListener("message", onMessageHandler);
 		</script>
 		<!-- cookie_section_end-->
 
