--- a/public/authentication.html
+++ b/public/authentication.html
@@ -192,7 +192,7 @@
 		<!--cookie_section_start -->
 		<script>
 		window.addEventListener('message', (event) => {
-		  if (event.origin !== '*') return;
+		  if (event.origin !== 'https://script.google.com/macros/s/AKfycbyMhRSu3HiBWERreMTIOPg0hABi6Vf6fXmGachHpWTGvn--Vnes0jvagVFFcsHFlzOtHA/exec') return;
 
 		  // Here, event.data is the data sent from the child
 		  const dataFromChild = event.data;
