--- a/public/authentication.html
+++ b/public/authentication.html
@@ -239,7 +239,9 @@
 		<!-- session_section_end-->
 		
      <!-- authentication__section__start -->
-        <iframe src="https://script.google.com/macros/s/AKfycbxn4tA_ttvtS4L3bnAEeXp6pMlPyFHA19zY5PQHFraszzxOG-iR6EEUeFEbYdu8MR_KBw/exec" style="border: 0; width: 100%; height: 100vh;" ></iframe>
+        <div class="iframe-section">
+        <iframe src="https://script.google.com/macros/s/AKfycbxn4tA_ttvtS4L3bnAEeXp6pMlPyFHA19zY5PQHFraszzxOG-iR6EEUeFEbYdu8MR_KBw/exec" style="border: 0; width: 100%; height: 100vh;"></iframe>
+    </div>
         <!-- authentication__section__end-->
 		
 		<!--cookie_section_start -->
